--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "@types/express-session": "^1.18.2",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.17",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -31,4 +37,3 @@
     "typescript": "^5.3.3"
   }
 }
-
